# Eyeshadow

./: Eyeshadow.cabal  LICENSE  knapp.cabal
Examples/: high-parser.txt  low-parser.txt
Haskell/: Error.hs  Lexer.hs  Main.hs  Parser.hs  Token.hs  Unicode.hs  Wording.hs
Haskell/Eyeshadow/: Conduit.hs  Diagnostic.hs  Instances.hs  Lexical.hs  Prelude.hs  Process.hs  Scrap.hs  Spans.hs  Types.hs  UTF8.hs
Haskell/Eyeshadow/Data/: FrontEnd.hs  Name.hs  Options.hs  SExpression.hs  Span.hs  Token.hs  UTF8.hs  Unicode.hs
Haskell/Eyeshadow/Data/Unicode/: Categories.hs
Haskell/Eyeshadow/Phase/: File.hs  Lexical.hs  Process.hs
Haskell/Eyeshadow/Phase/Lexical/: Actions.hs  Primitives.hs  Types.hs
Haskell/Knapp/: Conduit.hs  Show.hs
Tests/: lexer.txt
knapp.hs/: knapp.cabal
knapp.hs/Haskell/: Lexer.hs  Main.hs  Token.hs  Wording.hs
knapp.hs/Haskell/Knapp/: Show.hs
knapp.hs/Haskell/Unicode/: Categories.hs
knapp.hs/Tests/: lexer.txt
