name: Eyeshadow
version: 0.1
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2013 Irene Knapp
author: Irene Knapp <irene.knapp@icloud.com>
maintainer: irene.knapp@icloud.com
homepage: http://ireneknapp.com/software/
bug-reports: https://github.com/IreneKnapp/Eyeshadow/issues/new
category: Dependent Types
synopsis: Compiler for a simple dependently-typed programming language.
Cabal-version: >= 1.10
Build-type: Simple
description:
  This package is a compiler, targeting JavaScript, for a simple
  dependently-typed programming language.  It is mostly an experiment at
  present, to allow the author to learn about typesystems.
  .
  Release history:
  .
  [Version 0.1] Initial release.

Source-Repository head
  type: git
  location: git://github.com/IreneKnapp/Eyeshadow.git

Executable eyeshadow
  main-is: Main.hs
  other-modules: Eyeshadow.Data.FrontEnd,
                 Eyeshadow.Data.Name,
                 Eyeshadow.Data.Options,
                 Eyeshadow.Data.SExpression,
                 Eyeshadow.Data.Span,
                 Eyeshadow.Data.UTF8,
                 Eyeshadow.Phase.File,
                 Eyeshadow.Phase.Lexical,
                 Eyeshadow.Phase.Process,
                 Eyeshadow.Diagnostic,
                 Eyeshadow.Instances,
                 Eyeshadow.Prelude
  hs-source-dirs: Haskell
  build-depends: base >= 4.1 && < 5,
                 bytestring >= 0.9.2.1 && < 1,
                 conduit >= 1.0.1 && < 2,
                 containers >= 0.5.0.0 && < 1,
                 monad-control >= 0.3.2 && < 1,
                 mtl >= 2.1.1 && < 3,
                 resourcet >= 0.4.4 && < 1,
                 text >= 0.11 && < 1,
                 transformers >= 0.3.0.0 && < 1,
                 transformers-base >= 0.4.1 && < 1
  ghc-options: -Wall -fno-warn-name-shadowing -fwarn-tabs
  default-language: Haskell2010
