name: Eyeshadow
version: 0.1
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2013, 2014 Irene Knapp
author: Irene Knapp <irene.knapp@icloud.com>
maintainer: Irene Knapp <irene.knapp@icloud.com>
homepage: http://ireneknapp.com/software/
bug-reports: https://github.com/IreneKnapp/Eyeshadow/issues/new
category: Dependent Types
synopsis: Compiler for a simple dependently-typed programming language.
Cabal-version: >= 1.10
Build-type: Simple
description:
  This package is a compiler, targeting JavaScript as well as native code via
  LLVM, for a simple dependently-typed programming language.  It is mostly an
  experiment at present, to allow the author to learn about typesystems.
  .
  Release history:
  .
  [Version 0.1] Initial release.

Source-Repository head
  type: git
  location: git://github.com/IreneKnapp/Eyeshadow.git

Executable eyeshadow
  main-is: Main.hs
  other-modules: Eyeshadow.Data.FrontEnd,
                 Eyeshadow.Data.Name,
                 Eyeshadow.Data.Options,
                 Eyeshadow.Data.SExpression,
                 Eyeshadow.Data.Span,
                 Eyeshadow.Data.Token,
                 Eyeshadow.Data.Unicode,
                 Eyeshadow.Data.Unicode.Categories,
                 Eyeshadow.Data.UTF8,
                 Eyeshadow.Phase.File,
                 Eyeshadow.Phase.Lexical,
                 Eyeshadow.Phase.Lexical.Actions,
                 Eyeshadow.Phase.Lexical.Primitives,
                 Eyeshadow.Phase.Lexical.Types,
                 Eyeshadow.Phase.Process,
                 Eyeshadow.Diagnostic,
                 Eyeshadow.Prelude
  hs-source-dirs: Haskell
  build-depends: base >= 4.1 && < 5,
                 bytestring >= 0.9.2.1 && < 1,
                 conduit >= 1.0.17.1 && < 2,
                 extensible-effects >= 1.4.1 && < 2,
                 hashable >= 1.2.1.0 && < 2,
                 mtl >= 2.1.3.1 && < 3,
                 resource-effect >= 0.1.1 && < 1,
                 text >= 0.11 && < 1,
                 unordered-containers >= 0.2.4.0 && < 1
  ghc-options: -Wall -fno-warn-name-shadowing -fwarn-tabs
  default-language: Haskell2010
