name: knapp
version: 1.0
cabal-version: 1.12
build-type: Simple
license: AllRightsReserved
copyright: Copyright (c) 2012 Irene Knapp
author: Irene Knapp
maintainer: ireney.knapp@gmail.com
homepage: http://ireneknapp.com/software/
bug-reports: http://ireneknapp.com/issues/create/
category: Compiler
synopsis: Compiler for the Knapp programming language.
description:
  This package is a compiler for the experimental Knapp programming language,
  meant to serve as a testbed for advanced type-system ideas.

Source-Repository head
  type: darcs
  location: http://ireneknapp.com/software/darcs/knapp/

Flag debug
  manual: True
  default: False

Flag profile
  manual: True
  default: False

Executable knapp
  main-is: Main.hs
  hs-source-dirs: Haskell
  build-depends: array >= 0.4.0.0 && < 1,
                 base >= 4.1 && < 5,
                 bytestring >= 0.9.2.1 && < 1,
                 containers >= 0.4.2.1 && < 1,
                 text >= 0.11.2.2 && < 1,
                 conduit >= 0.5.2 && < 1,
--                 monad-control >= 0.3.1.3 && < 1,
                 resourcet >= 0.3.2.1 && < 1,
                 transformers >= 0.2.2.0 && < 1,
                 mtl >= 2.0.1.0 && < 3
  default-language: Haskell2010
  if flag(debug)
    ghc-options: -debug
  if flag(profile)
    ghc-options: -rtsopts -auto-all -caf-all
  ghc-options: -threaded
